--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     </nav>
 
-    <aside class="product-detail inactive">
+    <aside id="shopoingCartContainer" class="inactive">
         <div class="title-container">
             <img src="./icons/flechita.svg" alt="arrow">
             <p class="title">My order</p>
@@ -171,21 +171,32 @@
         </div>
     </aside>
 
+    <aside id="productDetail" class="">
+        <div class="product-detail-close">
+            <img src="./icons/icon_close.png" alt="close">
+
+        </div>
+
+        <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+            alt="bike">
+        <div class="product-info">
+            <p>$35,00 </p>
+            <p>Bike</p>
+            <p>Este es un producto que lo puedes utilizar en cualquier terreno en el que se encuentre el deportista</p>
+
+            <button class="primary-button add-to-card-button">
+                <img src="./icons/bt_add_to_cart.svg" alt="add to card">
+                Add to card
+            </button>
+
+
+        </div>
+
+    </aside>
+
     <section class="main-conteiner">
         <div class="cards-container">
-            <!-- <div class="product-card">
-                <img src="https://images.pexels.com/photos/100582/pexels-photo-100582.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
-                    alt="">
-                <div class="product-info">
-                    <div>
-                        <p>$120,00</p>
-                        <p>Bike</p>
-                    </div>
-                    <figure>
-                        <img src="./icons/bt_add_to_cart.svg" alt="">
-                    </figure>
-                </div>
-            </div> -->
+
     </section>
 
 
